add some ARIA labels

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 
     <header class="header">
 
-      <a href="#" class="header__hamburger">
+      <a aria-label="toggle primary navigation" href="#" class="header__hamburger">
         <span class="header__hamburger__line"></span>
         <span class="header__hamburger__line"></span>
         <span class="header__hamburger__line"></span>
@@ -45,7 +45,7 @@
     <section class="showcase">
       <div class="showcase__content">
         <h1 class="showcase__content__title">We are creatives</h1>
-        <a href="#features" class="showcase__content__more"></a>
+        <a aria-hidden="true" href="#features" class="showcase__content__more"></a>
       </div>
     </section>
 
