remove loading attr from images inside picture element

--- a/public/index.html
+++ b/public/index.html
@@ -66,14 +66,14 @@
       <div class="features__image features__image--1">
         <picture>
           <source srcset="images/mobile/image-transform.jpg" media="(max-width: 768px)">
-          <img src="images/desktop/image-transform.jpg" loading="lazy" decoding="async" alt="" aria-hidden="true">
+          <img src="images/desktop/image-transform.jpg" decoding="async" alt="" aria-hidden="true">
         </picture>
       </div>
 
       <div class="features__image features__image--2">
         <picture>
           <source srcset="images/mobile/image-stand-out.jpg" media="(max-width: 768px)">
-          <img src="images/desktop/image-stand-out.jpg" loading="lazy" decoding="async" alt="" aria-hidden="true">
+          <img src="images/desktop/image-stand-out.jpg" decoding="async" alt="" aria-hidden="true">
         </picture>
       </div>
 
@@ -131,28 +131,28 @@
       <div class="gallery__image">
         <picture>
           <source srcset="images/mobile/image-gallery-milkbottles.jpg" media="(max-width: 768px)">
-          <img src="images/desktop/image-gallery-milkbottles.jpg" loading="lazy" decoding="async" alt="Milkbottles">
+          <img src="images/desktop/image-gallery-milkbottles.jpg" decoding="async" alt="Milkbottles">
         </picture>
       </div>
 
       <div class="gallery__image">
         <picture>
           <source srcset="images/mobile/image-gallery-orange.jpg" media="(max-width: 768px)">
-          <img src="images/desktop/image-gallery-orange.jpg" loading="lazy" decoding="async" alt="Orange">
+          <img src="images/desktop/image-gallery-orange.jpg" decoding="async" alt="Orange">
         </picture>
       </div>
 
       <div class="gallery__image">
         <picture>
           <source srcset="images/mobile/image-gallery-cone.jpg" media="(max-width: 768px)">
-          <img src="images/desktop/image-gallery-cone.jpg" loading="lazy" decoding="async" alt="Cone">
+          <img src="images/desktop/image-gallery-cone.jpg" decoding="async" alt="Cone">
         </picture>
       </div>
 
       <div class="gallery__image">
         <picture>
           <source srcset="images/mobile/image-gallery-sugar-cubes.jpg" media="(max-width: 768px)">
-          <img src="images/desktop/image-gallery-sugarcubes.jpg" loading="lazy" decoding="async" alt="Sugar cubes">
+          <img src="images/desktop/image-gallery-sugarcubes.jpg" decoding="async" alt="Sugar cubes">
         </picture>
       </div>
 
